--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          repository: sunnysavita10/deeplearningupdatedwithstreamlit
+          repository: shubham3032002/PNEUMONIA-detection--Xray-classification
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: main
 
@@ -45,7 +45,7 @@ jobs:
       - name: Login to docker hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
+          username: ${{secrets.DOCKER_USERNAM}}
           password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Extract metadata (tags,labels) for docker
