--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,35 +33,34 @@ jobs:
 
 
   push_to_registry:
-    name: Push Docker image to Docker hub
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout out the repo
+      - name: Checkout the repo
         uses: actions/checkout@v3
   
       - name: Setup Docker Build
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to docker hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKER_USERNAM}}
-          password: ${{secrets.DOCKER_PASSWORD}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags,labels) for docker
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v4
         with:
           images: ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
-          context: "{{defaultContext}}"
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
 
 
   Continuous-Deployment:
