--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,40 +13,33 @@ permissions:
 
 jobs:
   integration:
-    name: :Continues Integration
+    name: :Continuous Integration
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-        with:
-          repository: shubham3032002/PNEUMONIA-detection--Xray-classification
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: main
 
       - name: Lint code
         run: echo "Linting repository"
 
       - name: Run unit tests
         run: echo "Running unit tests"
-      
-
-
 
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push Docker Image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3
-  
+
       - name: Setup Docker Build
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAM}}
-          password: ${{ secrets.DOCKER_PASSWORD}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -54,7 +47,7 @@ jobs:
         with:
           images: ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -62,14 +55,13 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-
   Continuous-Deployment:
     needs: push_to_registry
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout the code
         uses: actions/checkout@v3
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -77,21 +69,24 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Pull images
+      - name: Pull Docker Image
         run: |
-        
-      - name: Run Docker Image to serve users
-        run: |
-         docker run -d -p 8501:8501 --name=stapp -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.REGISTRY}}/${{ secrets.IMAGE_NAME }}:main
-      - name: Clean previous images and containers
-        run: |
-         docker system prune -f
-      
+          docker pull ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}:main
 
-    
+      - name: Run Docker Image to Serve Users
+        run: |
+          docker run -d -p 8501:8501 --name stapp \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_REGION=${{ secrets.AWS_REGION }} \
+            ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}:main
+
+      - name: Clean Previous Images and Containers
+        run: |
+          docker system prune -f
