--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,55 +13,63 @@ permissions:
 
 jobs:
   integration:
-    name: :Continuous Integration
+    name: :Continues Integration
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          repository: shubham3032002/PNEUMONIA-detection--Xray-classification
+          ref: main
 
       - name: Lint code
         run: echo "Linting repository"
 
       - name: Run unit tests
         run: echo "Running unit tests"
+      
+
+
 
   push_to_registry:
-    name: Push Docker Image to Docker Hub
+    name: Push Docker image to Docker hub
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repo
+      - name: Checkout out the repo
         uses: actions/checkout@v3
-
+  
       - name: Setup Docker Build
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Login to docker hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          username: ${{ secrets.DOCKER_USERNAME}}
-          password: ${{ secrets.DOCKER_PASSWORD}}
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata (tags,labels) for docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}
 
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v4
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
         with:
-          context: .
+          context: "{{defaultContext}}"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+
+
   Continuous-Deployment:
     needs: push_to_registry
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Checkout the code
+      - name: Checkout
         uses: actions/checkout@v3
-
+      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -69,24 +77,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Pull Docker Image
+      - name: Pull images
         run: |
-          docker pull ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}:main
+        
+      - name: Run Docker Image to serve users
+        run: |
+         docker run -d -p 8501:8501 --name=stapp -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.REGISTRY}}/${{ secrets.IMAGE_NAME }}:main
+      - name: Clean previous images and containers
+        run: |
+         docker system prune -f
+      
 
-      - name: Run Docker Image to Serve Users
-        run: |
-          docker run -d -p 8501:8501 --name stapp \
-            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-            -e AWS_REGION=${{ secrets.AWS_REGION }} \
-            ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}:main
-
-      - name: Clean Previous Images and Containers
-        run: |
-          docker system prune -f
+    
