--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   integration:
-    name: :Continues Integration
+    name: :Continuous Integration
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -27,71 +27,69 @@ jobs:
 
       - name: Run unit tests
         run: echo "Running unit tests"
-      
-
-
 
   push_to_registry:
-    name: Push Docker image to Docker hub
+    name: Push Docker Image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout out the repo
+      - name: Checkout Repository
         uses: actions/checkout@v3
   
-      - name: Setup Docker Build
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to docker hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags,labels) for docker
+      - name: Extract Metadata (Tags, Labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v4
         with:
-          images: ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}
+          images: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }}
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: "{{defaultContext}}"
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-
 
   Continuous-Deployment:
     needs: push_to_registry
     runs-on: self-hosted
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v3
       
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME}}
-          password: ${{ secrets.DOCKER_PASSWORD}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Pull images
+      - name: Pull Docker Image
         run: |
+          docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }}:main
         
-      - name: Run Docker Image to serve users
+      - name: Run Docker Image to Serve Users
         run: |
-         docker run -d -p 8501:8501 --name=stapp -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.REGISTRY}}/${{ secrets.IMAGE_NAME }}:main
-      - name: Clean previous images and containers
-        run: |
-         docker system prune -f
-      
+          docker run -d -p 8501:8501 --name=stapp \
+          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          -e AWS_REGION=${{ secrets.AWS_REGION }} \
+          ${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }}:main
 
-    
+      - name: Clean Up Unused Images and Containers
+        run: |
+          docker system prune -f
