--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 bentoml
 #bentoml==1.0.10
-joblib==1.2.0
-pip-chill==1.0.1
-torchvision==0.14.1
+joblib
+pip-chill
+torchvision
 tqdm==4.64.1
 wincertstore==0.2
 dvc
